fix: text color in contact form

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -72,7 +72,7 @@ const makeTitle = title ? title + " | " + "Monolithon" : "Monolithon - ERPNext s
 			}
 		</style>
 
-		<script is:inline>
+		<script>
 			/** This section is only needed once per page if manually copying **/
 				if (typeof MauticSDKLoaded == "undefined") {
 					var MauticSDKLoaded = true;
