--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -74,6 +74,12 @@ changeLanguage("en");
 			box-shadow: 0px 0px 0px #fff inset;
 			border-radius: 4px;
 			box-sizing: border-box;
+			color: black;
+		}
+		.mauticform-input::selection,
+		.mauticform-textarea::selection {
+			background: white;
+			color: white;
 		}
 		.mauticform-checkboxgrp-row {
 		}
@@ -125,7 +131,8 @@ changeLanguage("en");
 		.mauticform-pagebreak-wrapper .mauticform-button-wrapper {
 			display: inline;
 		}
-	</style><style type="text/css" scoped>
+	</style>
+	<style type="text/css" scoped>
 		.mauticform-field-hidden {
 			display: none;
 		}
@@ -192,7 +199,7 @@ changeLanguage("en");
 											id="mauticform_input_contactform_last_name"
 											name="mauticform[last_name]"
 											value=""
-											class="mauticform-input"
+											class="mauticform-input "
 											type="text"
 										/>
 										<span class="mauticform-errormsg" style="display: none;">Mandotory</span>
@@ -210,7 +217,7 @@ changeLanguage("en");
 											Email address
 										</label>
 										<input
-											id="mauticform_input_contactform_email_address"
+											id="mauticform_input_contactform_email_address "
 											name="mauticform[email_address]"
 											value=""
 											class="mauticform-input"
