fix: hu contact form issue

--- a/src/pages/hu/kapcsolat.astro
+++ b/src/pages/hu/kapcsolat.astro
@@ -74,6 +74,13 @@ changeLanguage("hu");
 				box-shadow: 0px 0px 0px #fff inset;
 				border-radius: 4px;
 				box-sizing: border-box;
+				color: black;
+			}
+
+			.mauticform-input::selection,
+			.mauticform-textarea::selection {
+				background: white;
+				color: white;
 			}
 			.mauticform-checkboxgrp-row {
 			}
