fix: cookie page load

--- a/src/components/cookie.astro
+++ b/src/components/cookie.astro
@@ -1,8 +1,9 @@
 <body class="dark:bg-stone-900">
   <link rel="stylesheet" href="/cookieconsent.css" />
   <script src="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@v2.x.x/dist/cookieconsent.js" is:inline></script>
-  <script is:inline>
-    window.onload = function (){
+  <script>
+    document.addEventListener("astro:page-load", onLoadFunction);
+    function onLoadFunction (){
       const cc = initCookieConsent();
 
       cc.run({
