[FIX] ssg site and nav

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -24,6 +24,7 @@ export const menuitems = [
 		children: [
 			{ title: "VueStoreFront", path: "path_header.vue-storefront" },
 			{ title: "Shopify", path: "path_header.shopify" },
+			{ title: "Astro.build", path: "path_header.astro" },
 		],
 	},
 	{
