[FIX] letstalk component

--- a/src/pages/hu/erpnext.astro
+++ b/src/pages/hu/erpnext.astro
@@ -2,7 +2,7 @@
 import { changeLanguage } from "i18next";
 import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
-import LetsTalk from "@components/LetsTalk.astro";
+import LetsTalk from "@components/LetsTalkhu.astro";
 import Button from "@components/ui/button.astro";
 import Link from "@components/ui/link.astro";
 changeLanguage("hu");
