--- a/src/pages/hu/konyveles.astro
+++ b/src/pages/hu/konyveles.astro
@@ -2,7 +2,7 @@
 import { changeLanguage } from "i18next";
 import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
-import LetsTalk from "@components/LetsTalk.astro";
+import LetsTalk from "@components/LetsTalkhu.astro";
 changeLanguage("hu");
 ---
 
