--- a/src/pages/static-site-generator.astro
+++ b/src/pages/static-site-generator.astro
@@ -29,7 +29,7 @@ changeLanguage("en");
                     <h2 class="font-bold text-3xl mb-10">Jamstack - the key to fast websites by simplifying the system - decoupling</h2>
                     <p class="list-disc text-[17px] leading-7 space-y-5]">
                         Jamstack is a completely new approach that can be summarized by simplifying it, returning to the roots when a website does not want to be more than just a website. That is, it can be more, but unlike the previous complex systems, we don't have to solve everything in the web application. We can say that the website is liberated because now it can be almost anything, and we don't have to worry about the limitations of the complex system. In the past, when we think of, for example, a PHP-based page like WordPress, to build a website, we were limited by the boundaries of WordPress. Now, as the official definition says, Jamstack eliminates the approach that business logic (simplified website functions) determines the appearance and operation of the website together. <br><br>
-                        Returning to the basics means that, alongside the most modern technologies, we can build a fast website using simple HTML. However, there may be a need for the business logic and functions mentioned earlier, and we don't have to give them up, but we can entrust them to a backend system that handles them much better than, for example, the ERPNext or Odoo enterprise resource planning system, but also mention the Mautic Marketing and newsletter software, which can be connected through APIs. <br><br>
+                        Returning to the basics means that, alongside the most modern technologies, we can build a fast website using simple HTML. However, there may be a need for the business logic and functions mentioned earlier, and we don't have to give them up, but we can entrust them to a backend system that handles them much better than, for example, the <a href="/erpnext/" style="text-decoration: underline;">ERPNext</a> or <a href="/odoo-magyarul/" style="text-decoration: underline;">Odoo</a> enterprise resource planning system, but also mention the <a href="/mautic-marketing-automation-platform/" style="text-decoration: underline;">Mautic Marketing and Newsletter Software</a>, which can be connected through APIs. <br><br>
                         However, not in every case is such a backend system necessary, and in most cases, Jamstack consists of a single, highly customizable and much faster static website component, that is, actual websites.
                     </p>
                 </section>
@@ -62,9 +62,7 @@ changeLanguage("en");
                 <section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
                     <h2 class="font-bold text-3xl mb-10">Nuxt.js</h2>
                     <p class="list-disc text-[17px] leading-7 space-y-5]">
-                        We mention Nuxt.js only because, even though it has the above super features, for those who not only want a website, whether it's a static site or a Jamstack-based one but also want to sell and use a lightning-fast system for this, we recommend the Headless VueStoreFront system, which is a fast e-commerce solution, among others, thanks to Nuxt
-            
-            .js.
+                        We mention Nuxt.js only because, even though it has the above super features, for those who not only want a website, whether it's a static site or a Jamstack-based one but also want to sell and use a lightning-fast system for this, we recommend the Headless <a href="/vuestorefront-headless-ecommerce/" style="text-decoration: underline;">VueStoreFront</a> system, which is a fast e-commerce solution, among others, thanks to Nuxt.js.
                     </p>
                 </section>
                 <section id="contact-form-2">
