--- a/src/pages/hu/titok.astro
+++ b/src/pages/hu/titok.astro
@@ -2,33 +2,63 @@
 import { changeLanguage } from "i18next";
 import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
-
+import LetsTalk from "@components/LetsTalkhu.astro";
+import Link from "@components/ui/link.astro";
 changeLanguage("hu");
 ---
 
-<Layout lang="en" title="Titok">
+<Layout lang="hu" title="A titok, amit szoftver kiválasztásához tudni kell">
 	<Container>
-		<div class="py-20 text-[#192734] dark:text-white">
-			<div>
-				<h1 class="md:text-[60px] mb-10 text-4xl font-semibold">Titok</h1>
-				<p class="md:text-[40px] text-2xl font-semibold mb-10">ERPNext üzemeltetése a felhőben</p>
+		<div class="px-5">
+			<div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
+				<div class="flex flex-col h-full justify-center">
+					<h1 class="text-[60px] leading-none font-semibold">Válassz jó szoftvert!</h1>
+					<h2 class="text-xl text-[#192734] dark:text-white my-4">Ebben segítenek a független szolgáltatók. </h2>
 				<div>
-					<img src="/images/frappecloud-banner.jpg" alt="" />
+					<Link href="/hu/kapcsolat">
+						Beszéljünk!
+					</Link>
+				</div>
+				</div>
+				<div>
+					<img class="w-[40vw]" src="/mautic-marketing-automation-platform.jpg" alt="" />
 				</div>
 			</div>
-			<div class="text-[#192734] dark:text-white">
-				<p class="text-lg mt-20">
-					Az ERPNext üzemeltetése szakértelem mellett speciális technikai feltételeket is megkíván. Több éves ERPNext használat alatt sok
-					partnerrel való együttműködés után megtaláltuk azt az ERPNext partnert, akit szívesen ajánlunk. Az ERPNext osztott tárhelyen nem
-					üzemeltethető, a menedzselt VPS és szerver szolgáltatások pedig jellemzően magasabb árkategóriába tartoznak. Ezért örömmel
-					mutatjuk be az ERPNext felhőszolgáltatót, amelyen a monolithon.com, a magyar ERPNext népszerűsítő oldal is fut.
-					<span class=" inline-block  py-10">
-						Az ERPNext fejlesztői által fejlesztett, üzemeltetett és optimalizált platform a Frappe Cloud szerintünk a legjobb ERPNext
-						hoszting szolgáltató, ezért ajánljuk és használjuk:
-					</span>
-					Részletek és regisztráció: <a href="https://frappecloud.com/" target="_blank" class=" text-[#50A6F2]">https://frappecloud.com</a>
+			<div class="flex flex-col items-center">
+				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+					<h2 class="font-bold text-3xl mb-10">Miben más egy szoftver beszerzése?</h2>
+					<p class="list-disc text-[17px] leading-7 space-y-5]">
+							 
+					</p>
+				</section>
+				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+					<h2 class="font-bold text-3xl mb-10">Független vs. társult szolgáltató</h2>
+					<p class="list-disc text-[17px] leading-7 space-y-5]">
+							
+				</section>
+
+				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+					<h2 class="font-bold text-3xl mb-10">Tökélestes szoftver nincs</h2>
+					<p class="list-disc text-[17px] leading-7 space-y-5]">
+						
+					</p>
+				</section>
+				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+					<h2 class="font-bold text-3xl mb-10">Nyílt forráskódú szoftverek</h2>
+					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					
 				</p>
+				</section>
+				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+					<h2 class="font-bold text-3xl mb-10">Bérlés, vásárlás vagy ingyenes szoftver
+					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					
+					</p>
+				</section>
 			</div>
+			<section>
+				<LetsTalk />
+			  </section>
 		</div>
 	</Container>
 </Layout>
